Minor formatting updated

--- a/ProjectReport_Simulation.html
+++ b/ProjectReport_Simulation.html
@@ -171,7 +171,7 @@ hr {
 
 <p>Sample mean:</p>
 
-<pre><code>## [1] 5.010175
+<pre><code>## [1] 4.982267
 </code></pre>
 
 <p>Theoretical mean:</p>
@@ -185,7 +185,7 @@ hr {
 
 <p>Sample variance:</p>
 
-<pre><code>## [1] 0.6259606
+<pre><code>## [1] 0.6535137
 </code></pre>
 
 <p>Theoretical variance:</p>
@@ -195,7 +195,7 @@ hr {
 
 <p>The sample variance is quite close to the theoretical variance. As is shown in Figure 2 (See Appendix for reference), there is not much difference between the standard deviation of the simulation and the theoretical standard deviation (highlighted in red lines) of the normal distribution curve, which indicates a good estimation of theoretical variance using the sample variance from 1000 simulations.</p>
 
-<h1>Distribution</h1>
+<h1>Discussion: Is the Distribution Approximately Normal?</h1>
 
 <p><img src="figure/unnamed-chunk-5-1.pdf" alt="plot of chunk unnamed-chunk-5"> 
 As the number of simulation becomes larger, the estimated sample mean is getting closer to the value of theoretical mean (5.0, highlighted by the horizontal line) with a little fluctuation, which is consistent with the Law of large numbers.</p>
@@ -271,7 +271,7 @@ g2 &lt;- g2 + labs(x = &quot;Number of observations&quot;, y = &quot;Cumulative 
 g2
 </code></pre>
 
-<h2>Figures</h2>
+<h2>Simulation Figures</h2>
 
 <p><img src="figure/unnamed-chunk-8-1.pdf" alt="Comparisons of sample mean and theoretical mean"> </p>
 
