Formatting and Proofreading

--- a/ProjectReport_Simulation.html
+++ b/ProjectReport_Simulation.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-<title>Overview</title>
+<title>1. Overview</title>
 
 <script type="text/javascript">
 window.onload = function() {
@@ -163,15 +163,15 @@ hr {
 </head>
 
 <body>
-<h1>Overview</h1>
+<h1>1. Overview</h1>
 
-<p>This report is the first part of the Coursera statistical inference course project. In this report, an exponential distribution is simulated, and the distribution of averages of 40 exponentials is investigated. Explained through figures and explanatory texts, the simulated sample mean is compared with the theoretical mean, the simulated sample variance is compared with the theoretical variance, and whether the distribution is approximately normal is discussed.</p>
+<p>This report is the first part of the Statistical Inference course project. In this report, an exponential distribution is simulated, and the distribution of averages of 40 exponentials is investigated. Explained through figures and explanatory texts, the simulated sample mean is compared with the theoretical mean, the simulated sample variance is compared with the theoretical variance, and whether the distribution is approximately normal is discussed.</p>
 
-<h1>Sample Mean versus Theoretical Mean</h1>
+<h1>2. Sample Mean versus Theoretical Mean</h1>
 
 <p>Sample mean:</p>
 
-<pre><code>## [1] 4.982267
+<pre><code>## [1] 5.021141
 </code></pre>
 
 <p>Theoretical mean:</p>
@@ -181,11 +181,11 @@ hr {
 
 <p>The sample mean is pretty close to the theoretical mean. As is shown in Figure 1 (See Appendix for reference), the distribution of 1000 simulations looks like the Gaussian distribution (whose mean is 5.0 and variance is 0.625), with the sample mean located near the theoretical mean of (highlighted in blue color).</p>
 
-<h1>Sample Variance versus Theoretical Variance</h1>
+<h1>3. Sample Variance v.s. Theoretical Variance</h1>
 
 <p>Sample variance:</p>
 
-<pre><code>## [1] 0.6535137
+<pre><code>## [1] 0.6261272
 </code></pre>
 
 <p>Theoretical variance:</p>
@@ -195,7 +195,7 @@ hr {
 
 <p>The sample variance is quite close to the theoretical variance. As is shown in Figure 2 (See Appendix for reference), there is not much difference between the standard deviation of the simulation and the theoretical standard deviation (highlighted in red lines) of the normal distribution curve, which indicates a good estimation of theoretical variance using the sample variance from 1000 simulations.</p>
 
-<h1>Discussion: Is the Distribution Approximately Normal?</h1>
+<h1>4. Discussion: Is the Distribution Approximately Normal?</h1>
 
 <p><img src="figure/unnamed-chunk-5-1.pdf" alt="plot of chunk unnamed-chunk-5"> 
 As the number of simulation becomes larger, the estimated sample mean is getting closer to the value of theoretical mean (5.0, highlighted by the horizontal line) with a little fluctuation, which is consistent with the Law of large numbers.</p>
@@ -205,9 +205,9 @@ As the number of simulation becomes larger, the estimated sample variance has so
 
 <p>According to Central Limit Theorem, when the sample size increases in a simulation, the distribution of iid (independent and identically distributed) variables will become more and more approximately normal, in which the distribution will be approaching the population mean, and the standard deviation will be approaching the standard error of the mean. In our simulation example, the average of 40 exponentials is assumed to be an iid variable, and 1000 averages can be considered as a large collection of data. Therefore, the distribution of 1000 averages of 40 exponentials is approximately normal.</p>
 
-<h1>Appendix</h1>
+<p>\pagebreak</p>
 
-<h2>R codes</h2>
+<h1>Appendix A: R codes</h1>
 
 <pre><code class="r"># Initialization and Simulation
 library(ggplot2) # Load the ggplot2 package
@@ -270,6 +270,8 @@ g2 &lt;- g2 + geom_hline(yintercept = 5^2/40) + geom_line(size = 2)
 g2 &lt;- g2 + labs(x = &quot;Number of observations&quot;, y = &quot;Cumulative variance&quot;)
 g2
 </code></pre>
+
+<p>\pagebreak</p>
 
 <h2>Simulation Figures</h2>
 
