--- a/ProjectReport_ToothGrowth.html
+++ b/ProjectReport_ToothGrowth.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-<title>Overview</title>
+<title>1. Overview</title>
 
 <script type="text/javascript">
 window.onload = function() {
@@ -163,15 +163,17 @@ hr {
 </head>
 
 <body>
-<h1>Overview</h1>
+<h1>1. Overview</h1>
 
-<p>This report is the second part of the Coursera statistical inference course project. In this report, the ToothGrowth data in the R datasets will be analyzed using some basic inferential statistics. Exploratory data analyses and summary of the data will be first given. After that, comparisons of tooth growth by supp and dose will be performed respectively, with the relevant confidence intervals calculated; different hypotheses and assumptions will be formulated and tested using T statistics. Conclusions will be made based on the statistical results.</p>
+<p>This report is the second part of the Statistical Inference course project. In this report, the ToothGrowth data in the R datasets will be analyzed using some basic inferential statistics. Exploratory data analyses and summary of the data are first given. After that, comparisons of tooth growth by supp and dose are performed respectively, in which different assumptions, null hypotheses (\(H_0\)), and alternative hypotheses (\(H_a\)) are set up and tested using T test. Finally, conclusions are made based on the T statistics.</p>
 
-<h1>Exploratory Analyses on ToothGrowth Data</h1>
+<h1>2. Exploratory Analyses on ToothGrowth Data</h1>
 
-<p>For exploratory plots, see Appendix for reference. Based on the plots, in terms of supplements (Figure 1), OJ seems to contribute to a higher tooth growth compared with VC; in terms of dose (Figure 2), a higher dose seems to increase the length of tooth growth. Both observations require hypothesis testing.</p>
+<p>For exploratory plots, see Appendix for reference. Based on the plots, in terms of different supp (Figure 1), VC and OJ seem to have different effects on the length of tooth growth, though it is not very easy to distinguish; in terms of dose (Figure 2), a higher dose seems to increase the length of tooth growth. Both observations require two-sided hypothesis testing, which will be explained in details later.</p>
 
-<h1>Basic Summary of the Data</h1>
+<h1>3. Basic Summary of the Data</h1>
+
+<h2>3.1 General information:</h2>
 
 <pre><code>##       len        supp         dose      
 ##  Min.   : 4.20   OJ:30   Min.   :0.500  
@@ -182,17 +184,39 @@ hr {
 ##  Max.   :33.90           Max.   :2.000
 </code></pre>
 
-<h2>Basic Summary of Tooth Growth by Supp</h2>
+<h2>3.2 Basic summary of tooth growth by supp:</h2>
 
-<h2>Basic Summary of Tooth Growth by Dose</h2>
+<pre><code>## $OJ
+##    Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
+##    8.20   15.52   22.70   20.66   25.72   30.90 
+## 
+## $VC
+##    Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
+##    4.20   11.20   16.50   16.96   23.10   33.90
+</code></pre>
 
-<h1>Comparisons of Tooth Growth by Supp</h1>
+<h2>3.3 Basic summary of tooth growth by dose:</h2>
 
-<p>Assuming that the data of tooth growth by OJ and VC are both normally distributed, and the population variances are unequal.</p>
+<pre><code>## $`0.5`
+##    Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
+##   4.200   7.225   9.850  10.600  12.250  21.500 
+## 
+## $`1`
+##    Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
+##   13.60   16.25   19.25   19.74   23.38   27.30 
+## 
+## $`2`
+##    Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
+##   18.50   23.52   25.95   26.10   27.83   33.90
+</code></pre>
 
-<p><strong>H0</strong>: there is no difference between tooth growth by VC and tooth growth by OJ (VC = OJ).</p>
+<h1>4. Comparisons of Tooth Growth by Supp</h1>
 
-<p><strong>Ha</strong>: the tooth growth by VC is larger than the tooth growth by OJ (VC &gt; OJ).</p>
+<p>Assuming that &quot;len&quot; is an iid variable, the data of tooth growth by VC and OJ are both normally distributed, and the population variances are unequal.</p>
+
+<p>\(H_0\): The length of tooth growth by VC is equivalent to the length of tooth growth by OJ (\(VC = OJ\)).</p>
+
+<p>\(H_a\): The length of tooth growth by VC is not equivalent to the length of tooth growth by OJ (\(VC \neq  OJ\)).</p>
 
 <p><strong>Hypothesis testing</strong>:</p>
 
@@ -209,19 +233,19 @@ hr {
 ##  20.66333  16.96333
 </code></pre>
 
-<p>According to the statistical test, the confidence interval did not exclude zero, and the p-value is not less than 0.05.</p>
+<p>According to the statistical test, the confidence interval did not exclude zero, the absolute value of the test statistic is not greater than <code>qt(.975, 55.309)</code> = 2.0038, and the p-value is not less than the 0.05 threshold.</p>
 
-<p><strong>Conclusion</strong>: The null hypothesis is not rejected. There is no difference between tooth growth by VC and tooth growth by OJ.</p>
+<p><strong>Conclusion</strong>: The null hypothesis is not rejected. The length of tooth growth by VC is equivalent to the length of tooth growth by OJ (\(VC = OJ\)).</p>
 
-<h1>Comparisons of Tooth Growth by Dose</h1>
+<h1>5. Comparisons of Tooth Growth by Dose (Need replacement for one-sided test)</h1>
 
-<h2>Dose 0.5 v.s. Dose 1.0</h2>
+<h2>5.1 \(Dose_{0.5}\) v.s. \(Dose_{1.0}\)</h2>
 
-<p>Assuming that the data of tooth growth by dose 0.5 and dose 1.0 are normally distributed, and the population variances are equal.</p>
+<p>Assuming that &quot;len&quot; is an iid variable, the data of tooth growth by dose 0.5 and dose 1.0 are normally distributed, and the population variances are equal.</p>
 
-<p><strong>H0</strong>: there is no difference between tooth growth by dose 0.5 and tooth growth by dose 1.0 (dose 0.5 = dose 1.0).</p>
+<p>\(H_0\): The length of tooth growth by a dose of 0.5 is equivalent to the length of tooth growth by a dose of 1.0 (\(Dose_{0.5} = Dose_{1.0}\)).</p>
 
-<p><strong>Ha</strong>: the tooth growth by dose 0.5 is smaller than the tooth growth by dose 1.0 (dose 0.5 &lt; dose 1.0).</p>
+<p>\(H_a\): The length of tooth growth by a dose of 0.5 is not equivalent to the length of tooth growth by a dose of 1.0 (\(Dose_{0.5} \neq Dose_{1.0}\)).</p>
 
 <p><strong>Hypothesis testing</strong>:</p>
 
@@ -238,17 +262,17 @@ hr {
 ##            10.605            19.735
 </code></pre>
 
-<p>According to the statistical test, both the lower and upper limit of the confidence interval is smaller than zero, and the p-value is much smaller than 0.05.</p>
+<p>According to the statistical test, both the lower and upper limit of the confidence interval is smaller than zero, the absolute value of the test statistic is much smaller than <code>qt(.025, 38)</code> = -2.0244, and the p-value is much smaller than the 0.05 threshold.</p>
 
-<p><strong>Conclusion</strong>: The null hypothesis is rejected. The tooth growth by dose 0.5 is smaller than the tooth growth by dose 1.0.</p>
+<p><strong>Conclusion</strong>: The null hypothesis is rejected. The length of tooth growth by a dose of 0.5 is not equivalent to the length of tooth growth by a dose of 1.0 (\(Dose_{0.5} \neq Dose_{1.0}\)).</p>
 
-<h2>Dose 0.5 v.s. Dose 2.0</h2>
+<h2>5.2 \(Dose_{0.5}\) v.s. \(Dose_{2.0}\)</h2>
 
-<p>Assuming that the data of tooth growth by dose 0.5 and dose 2.0 are normally distributed, and the population variances are not equal.</p>
+<p>Assuming that &quot;len&quot; is an iid variable, the data of tooth growth by dose 0.5 and dose 2.0 are normally distributed, and the population variances are not equal.</p>
 
-<p><strong>H0</strong>: there is no difference between tooth growth by dose 0.5 and tooth growth by dose 2.0 (dose 0.5 = dose 2.0).</p>
+<p>\(H_0\): The length of tooth growth by a dose of 0.5 is equivalent to the length of tooth growth by a dose of 2.0 (\(Dose_{0.5} = Dose_{2.0}\)).</p>
 
-<p><strong>Ha</strong>: the tooth growth by dose 0.5 is smaller than the tooth growth by dose 2.0 (dose 0.5 &lt; dose 2.0).</p>
+<p>\(H_a\): The length of tooth growth by a dose of 0.5 is not equivalent to the length of tooth growth by a dose of 2.0 (\(Dose_{0.5} \neq Dose_{2.0}\)).</p>
 
 <p><strong>Hypothesis testing</strong>:</p>
 
@@ -265,17 +289,17 @@ hr {
 ##            10.605            26.100
 </code></pre>
 
-<p>According to the statistical test, both the lower and upper limit of the confidence interval is smaller than zero, and the p-value is much smaller than 0.05.</p>
+<p>According to the statistical test, both the lower and upper limit of the confidence interval is smaller than zero, the absolute value of the test statistic is much smaller than <code>qt(.025, 36.883)</code> = -2.0264, and the p-value is much smaller than the 0.05 threshold.</p>
 
-<p><strong>Conclusion</strong>: The null hypothesis is rejected. The tooth growth by dose 0.5 is smaller than the tooth growth by dose 2.0.</p>
+<p><strong>Conclusion</strong>: The length of tooth growth by a dose of 0.5 is not equivalent to the length of tooth growth by a dose of 2.0 (\(Dose_{0.5} \neq Dose_{2.0}\)).</p>
 
-<h2>Dose 0.5 v.s. Dose 2.0</h2>
+<h2>5.3 \(Dose_{1.0}\) v.s. \(Dose_{2.0}\)</h2>
 
-<p>Assuming that the data of tooth growth by dose 1.0 and dose 2.0 are normally distributed, and the population variances are not equal.</p>
+<p>Assuming that &quot;len&quot; is an iid variable, the data of tooth growth by dose 1.0 and dose 2.0 are normally distributed, and the population variances are not equal.</p>
 
-<p><strong>H0</strong>: there is no difference between tooth growth by dose 1.0 and tooth growth by dose 2.0 (dose 1.0 = dose 1.0).</p>
+<p>\(H_0\): The length of tooth growth by a dose of 1.0 is equivalent to the length of tooth growth by a dose of 2.0 (\(Dose_{1.0} = Dose_{2.0}\)).</p>
 
-<p><strong>Ha</strong>: the tooth growth by dose 1.0 is smaller than the tooth growth by dose 2.0 (dose 1.0 &lt; dose 2.0).</p>
+<p>\(H_a\): The length of tooth growth by a dose of 1.0 is not equivalent to the length of tooth growth by a dose of 2.0 (\(Dose_{1.0} \neq Dose_{2.0}\)).</p>
 
 <p><strong>Hypothesis testing</strong>:</p>
 
@@ -292,21 +316,19 @@ hr {
 ##          19.735          26.100
 </code></pre>
 
-<p>According to the statistical test, both the lower and upper limit of the confidence interval is smaller than zero, and the p-value is much smaller than 0.05.</p>
+<p>According to the statistical test, both the lower and upper limit of the confidence interval is smaller than zero, the absolute value of the test statistic is smaller than <code>qt(.025, 37.101)</code> = -2.0260, and the p-value is much smaller than the 0.05 threshold.</p>
 
-<p><strong>Conclusion</strong>: The null hypothesis is rejected. The tooth growth by dose 1.0 is smaller than the tooth growth by dose 2.0.</p>
+<p><strong>Conclusion</strong>: The null hypothesis is rejected. The length of tooth growth by a dose of 1.0 is not equivalent to the length of tooth growth by a dose of 2.0 (\(Dose_{1.0} \neq Dose_{2.0}\)).</p>
+
+<p>\pagebreak</p>
 
 <h1>Appendix</h1>
 
-<h2>R Codes</h2>
-
-<p>To be added</p>
-
 <h2>Exploratory Plots</h2>
 
-<p><img src="figure/unnamed-chunk-6-1.pdf" alt="Tooth Growth by Different Supp"> </p>
+<p><img src="figure/unnamed-chunk-8-1.pdf" alt="Tooth Growth by Different Supp"> </p>
 
-<p><img src="figure/unnamed-chunk-7-1.pdf" alt="Tooth Growth by Different Dose"> </p>
+<p><img src="figure/unnamed-chunk-9-1.pdf" alt="Tooth Growth by Different Dose"> </p>
 
 </body>
 
